# site

./: .gitignore  AGENTS.md  CNAME  README.md  WARP.md  __main__.py  asimov.yml  confidentialite.md  contact.md  groupe_de_lecture.md  hackathons.md  home.md  jeudia.yml  lectures.yml  mentions_legales.md  nous_aider.md  package-lock.json  presentation_asimov.md  presentation_piaf.md  pyproject.toml  requirements.txt  test.html  utils.py
.github/workflows/: build.yml
blog/: Voyager.md  index.md  inference-time-intervention.md  introduction.md  watermarking-llm.md
blog/documents/: 2024-04-18 2024-04-18 safety 19.02.13.excalidraw.md  2024-04-18 2024-04-18 safety 19.03.09.excalidraw.md  2024-04-18 2024-04-18 safety 19.03.39.excalidraw.md  2024-04-18 2024-04-18 safety 19.04.15.excalidraw.md  2024-04-18 2024-04-18 safety 19.04.36.excalidraw.md  2024-04-18 2024-04-18 safety 19.05.41.excalidraw.md  Drawing 2024-09-19 22.07.07.excalidraw.md  bilan-sondage-1 2024-06-08 23.53.55.excalidraw.md  gpt-explained 2024-08-30 18.09.23.excalidraw.md  (+17 more)
components/: base.html  blog_page.html  button.html  footer.html  home_card.html  home_card_news.html  letters.html  luma.html  md_page.html  navbar.html  poems_page.html
home/: about-phrase.md  copyright.md
pages/: about-phrase.html  asimov.html  conference-asimov.html  conference-jeudia.html  confidentialite.md  contact.md  groupe-de-lecture.html  hackathons.md  home.html  jeudia.html  lecture.html  mentions-legales.md  nous-aider.md  presentation.md
poems/: alignement.md  index.md
scss/: style.scss
static/: style.css
(+12 files in other folders)
